# ai-cli

./: README.md  pyproject.toml
one_from_many_cli/: ai.py  auth.py  dynamoe.py  genlabs.py  hf_utils.py  utils.py
one_from_many_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
